@@ -1,16 +1,16 @@
 package com.cwa.GestionDeSalleDeSportV2.Configuration;
 
-
 import com.cwa.GestionDeSalleDeSportV2.Jwt.JwtFilter;
 import com.cwa.GestionDeSalleDeSportV2.Jwt.JwtUtils;
 import com.cwa.GestionDeSalleDeSportV2.Service.CustomUserDetailsService;
-import jakarta.websocket.Session;
-import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod;
+import org.springframework.security.access.expression.method.DefaultMethodSecurityExpressionHandler;
+import org.springframework.security.access.expression.method.MethodSecurityExpressionHandler;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
+import org.springframework.security.config.annotation.method.configuration.EnableGlobalMethodSecurity;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
@@ -23,30 +23,33 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
+@EnableMethodSecurity(prePostEnabled = true)
+@EnableGlobalMethodSecurity(prePostEnabled = true)
 @EnableWebSecurity
-public class SecutityConfig {
+public class SecurityConfig {
 
     private final CustomUserDetailsService customUserDetailsService;
     private final JwtUtils jwtUtils;
 
-    public SecutityConfig(CustomUserDetailsService customUserDetailsService, JwtUtils jwtUtils) {
+    public SecurityConfig(CustomUserDetailsService customUserDetailsService, JwtUtils jwtUtils) {
         this.customUserDetailsService = customUserDetailsService;
         this.jwtUtils = jwtUtils;
     }
 
-
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception{
+    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
+                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Activer CORS
                 .csrf(AbstractHttpConfigurer::disable)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // ✅ CORS moderne
-                .sessionManagement(Session ->
-                        Session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .sessionManagement(session ->
+                        session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth ->
-                        auth.requestMatchers(
+                        auth
+                                // Routes publiques
+                                .requestMatchers(
                                         "/api/auth/**",
                                         "/images/**",
                                         "/api/demandeInscriptions/inscriptin/en-ligne",
@@ -55,10 +58,12 @@ public class SecutityConfig {
                                         "/api-docs/**",
                                         "/v3/api-docs/**"
                                 ).permitAll()
-                                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll() // ✅ OPTIONS autorisé
+                                // Routes authentifiées
+                                .requestMatchers("/api/users/changer").authenticated()
+                                // Routes pour familles (authentifiées)
+                                .requestMatchers("/api/familles/**").authenticated()
+                                // Toutes les autres routes authentifiées
                                 .anyRequest().authenticated()
-//                                .requestMatchers("/api/users/changer").authenticated() // 🔥 Protéger cette route
-//                                .anyRequest().authenticated()
                 )
                 .addFilterBefore(new JwtFilter(customUserDetailsService, jwtUtils), UsernamePasswordAuthenticationFilter.class);
         return http.build();
@@ -66,37 +71,32 @@ public class SecutityConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:5173"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
-        config.setExposedHeaders(List.of("*"));
-        config.setAllowCredentials(true);
-
+        CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000")); // Frontend React
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowCredentials(true); // Permet les cookies/authentification
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
+        source.registerCorsConfiguration("/**", configuration); // Appliquer à toutes les routes
         return source;
     }
 
     @Bean
-    public PasswordEncoder passwordEncoder(){
+    public MethodSecurityExpressionHandler methodSecurityExpressionHandler() {
+        return new DefaultMethodSecurityExpressionHandler();
+    }
+
+    @Bean
+    public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
     @Bean
     public AuthenticationManager authenticationManager(HttpSecurity http, PasswordEncoder passwordEncoder) throws Exception {
         AuthenticationManagerBuilder authenticationManagerBuilder = http.getSharedObject(AuthenticationManagerBuilder.class);
-
         authenticationManagerBuilder
                 .userDetailsService(customUserDetailsService)
                 .passwordEncoder(passwordEncoder());
-
         return authenticationManagerBuilder.build();
     }
-
-//    @Bean
-//    public JwtDecoder jwtDecoder() {
-//        // Remplacez par l'URL de votre serveur d'authentification ou utilisez un decoder mock pour tests
-//        return NimbusJwtDecoder.withJwkSetUri("https://your-auth-server/.well-known/jwks.json").build();
-//    }
 }
